# microservice-rust-workshop

./: Cargo.toml  README.md
src/: lib.rs  main.rs  state.rs
src/kv_store/: image_response.rs  kv_error.rs  mod.rs
tests/: lesson-1.rs  lesson-2.rs  lesson-3.rs  lesson-4.rs
